--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -28,6 +28,7 @@ $special-grey-opacity: rgba($special-grey, 0.6);
 $special-black-opacity: rgba($black, 0.3);
 $special-blue-dark-opacity: rgba($basic-blue-dark, 0.3);
 $special-midnight-opacity: rgba($special-midnight, 0.3);
+$special-grey-opacity-borders: rgba($special-grey-borders, 0.3);
 
 // shadows
 $popup-shadow: rgba(29, 46, 91, 0.14);
