--- a/source/sass/alphabet.scss
+++ b/source/sass/alphabet.scss
@@ -1,26 +1,72 @@
-.alphabet__title {
-  @include title--white;
-  @include flex;
+.alphabet {
+  // display: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
 
-  justify-content: space-between;
-  padding: 10px 17px 9px 17px;
-  margin-bottom: 0;
-  font-style: normal;
+  @media (min-width: $tablet-width) {
+    display: grid;
+    // width: 575px;
+    grid-template-columns: 1fr auto;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 20px;
+    letter-spacing: 0.1em;
+  }
+
+  @media (min-width: $desctop-width) {
+    width: 730px;
+  }
+}
+
+.alphabet__title {
+  color: white;
+
+  @include flex;
   font-weight: 500;
   font-size: 14px;
   line-height: 18px;
   letter-spacing: 0.02em;
+
+  justify-content: space-between;
+  padding: 10px 17px 9px 17px;
+  margin-bottom: 0;
   text-transform: uppercase;
   border-radius: 4px 4px 0 0;
   background-color: $basic-blue-dark;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / -1;
+    font-size: 20px;
+    line-height: 20px;
+    letter-spacing: 0.1em;
+    padding: 27px 25px 23px 25px;
+    width: 63%;
+  }
+
+  @media (min-width: $desctop-width) {
+    padding: 20px 25px;
+    letter-spacing: 0.1em;
+    margin-bottom: 34px;
+  }
 }
 
 .alphabet__list {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-rows: repeat(6, 1fr);
   align-items: center;
   justify-items: center;
+
+  @media (min-width: $tablet-width) {
+    grid-template-columns: repeat(5, 55px);
+    grid-template-rows: repeat(6, 70px);
+  }
+
+  @media (min-width: $desctop-width) {
+    grid-template-columns: repeat(5, 60px);
+    gap: 15px;
+  }
 }
 
 .alphabet__item {
@@ -28,12 +74,33 @@
   width: 100%;
   text-align: center;
   border: 1px solid $special-grey-borders;
+
+  @media (min-width: $tablet-width) {
+    width: 100%;
+    height: 100%;
+  }
+
+  @media (min-width: $desctop-width) {
+    border-radius: 4px;
+  }
 }
 
 .alphabet__letter {
   @include flex;
   @include flex-center;
-  padding: 13px 18px 13px 17px;
+
+  padding: 10px 16px 10px 15px;
+
+  @media (min-width: $tablet-width) {
+    width: 55px;
+    height: 70px;
+    padding: 0;
+  }
+
+  @media (min-width: $desctop-width) {
+    border-radius: 4px;
+    width: 60px;
+  }
 }
 
 .alphabet__letter--selected {
@@ -47,4 +114,9 @@
 
 .alphabet__country {
   margin-bottom: 4px;
+
+  @media (min-width: $tablet-width) {
+    font-weight: normal;
+    margin-bottom: 10px;
+  }
 }
