--- a/source/sass/authorization.scss
+++ b/source/sass/authorization.scss
@@ -1,9 +1,41 @@
 .authorization {
   text-align: center;
-}
+  margin-bottom: 50px;
 
-.authorization--desctop-hidden {
-  @media (min-width: $desctop-width) {
-    display: none;
+  @media (min-width: $tablet-width) {
+    position: absolute;
+    top: 0;
+    right: 0;
   }
 }
+
+// .authorization--desctop-hidden {
+//   @media (min-width: $desctop-width) {
+//     display: none;
+//   }
+// }
+
+.authorization__button {
+  font-size: 17px;
+  line-height: 30px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+  border-radius: 25px;
+  padding: 12px 81px 8px 78px;
+  cursor: pointer;
+
+  @media (min-width: $tablet-width) {
+    line-height: 20px;
+    padding: 11px 40px 9px 39px;
+    font-weight: normal;
+    font-size: 20px;
+    text-align: center;
+    letter-spacing: 0.03em;
+  }
+}
+
+// .autorization__button--smaller {
+//   line-height: 20px;
+//   padding: 11px 40px 9px 39px;
+// }
