--- a/source/sass/calendar.scss
+++ b/source/sass/calendar.scss
@@ -1,6 +1,4 @@
 .calendar {
-  @include outline;
-
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -21,6 +19,11 @@
   font-weight: bold;
   font-size: 20px;
   line-height: 20px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+  }
 }
 
 .calendar__months {
@@ -31,6 +34,27 @@
 
 .calendar__day-name {
   padding-bottom: 10px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 18px;
+    line-height: 18px;
+  }
+}
+
+.calendar__text-mobile {
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+}
+
+.calendar__text-tablet {
+  @media (min-width: $mobile-width) {
+    display: none;
+  }
+
+  @media (min-width: $tablet-width) {
+    display: inline;
+  }
 }
 
 .calendar__day-name--weekend {
@@ -59,6 +83,16 @@
   color: $special-blue-dark-opacity;
 
   @include absolute-center;
+
+  @media (min-width: $tablet-width) {
+    font-size: 18px;
+    line-height: 18px;
+  }
+
+  @media (min-width: $desctop-width) {
+    @include flex;
+    padding: 10px;
+  }
 }
 
 .calendar__button--selected {
