--- a/source/sass/pagination.scss
+++ b/source/sass/pagination.scss
@@ -1,6 +1,12 @@
 .pagination-list {
   @include flex;
   @include flex-center;
+
+  @media (min-width: $desctop-width) {
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 36px;
+  }
 }
 
 .pagination__item {
@@ -11,16 +17,61 @@
   height: 5px;
   background-color: $special-blue-dark-opacity;
   margin-right: 16px;
+
+  @media (min-width: $desctop-width) {
+    margin-bottom: 27px;
+    justify-content: flex-start;
+    border-radius: none;
+    width: auto;
+    height: auto;
+    color: $special-grey-opacity;
+    margin-right: 0;
+    background-color: initial;
+  }
 }
 
-.pagination__link {
-  cursor: pointer;
-  display: block;
-  width: 5px;
-  height: 5px;
-  border-radius: 50%;
+// .pagination__link {
+//   cursor: pointer;
+//   display: block;
+//   width: 5px;
+//   height: 5px;
+//   border-radius: 50%;
+// }
+
+// .pagination-list__link {
+//   @media (min-width: $desctop-width) {
+//     margin-left: 36px;
+//   }
+// }
+
+.pagination--mobile {
+  @media (min-width: $desctop-width) {
+    display: none;
+  }
+}
+
+.pagination--desctop {
+  display: none;
+
+  @media (min-width: $desctop-width) {
+    display: block;
+  }
+}
+
+.pagination__text {
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.11em;
+  text-transform: uppercase;
+  margin-left: 36px;
 }
 
 .pagination__item--active {
   background-color: $basic-blue-dark;
+
+  @media (min-width: $desctop-width) {
+    color: $black;
+    background-color: initial;
+  }
 }
