--- a/source/sass/profile.scss
+++ b/source/sass/profile.scss
@@ -1,27 +1,101 @@
 .profile {
-  @include outline;
-
   color: $basic-blue;
-  padding: 20px 25px 34px 25px;
+  padding: 0 0 34px 0;
   background-color: $basic-blue-light;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 0 48px 0;
+  }
+}
+
+.profile__title {
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: $basic-blue-light;
+  padding: 0 18px;
+  text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    top: unset;
+    bottom: -30px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 20px;
+    letter-spacing: 0.08em;
+  }
+
+  @media (min-width: $desctop-width) {
+    letter-spacing: 0.07em;
+  }
+}
+
+.profile__title--tags {
+  @media (min-width: $desctop-width) {
+    left: 39px;
+    padding: 0 14px;
+  }
 }
 
 .profile__content {
   @include flex;
   @include flex-center;
+  position: relative;
+
+  @media (min-width: $tablet-width) {
+    justify-content: space-between;
+  }
+
+  @media (min-width: $desctop-width) {
+    position: relative;
+    z-index: 2;
+    margin-top: -190px;
+  }
 }
 
 .profile__container {
+  position: relative;
   flex-basis: 100%;
   border: 1px solid $special-grey-borders;
   border-radius: 10px;
   padding: 27px 28px 27px 25px;
   text-align: center;
-  margin-bottom: 25px;
+  margin: 0 25px 25px 25px;
+}
+
+.profile__container--transport {
+  @media (min-width: $tablet-width) {
+    order: 3;
+    flex-basis: 30%;
+    padding: 31px 38px 31px 38px;
+    margin-bottom: 40px;
+  }
+
+  @media (min-width: $desctop-width) {
+    order: 5;
+    flex-basis: 21%;
+    margin: 0 60px 0 0;
+  }
+}
+
+.profile__container--tags {
+  @media (min-width: $tablet-width) {
+    order: 6;
+    margin: 0 75px;
+    padding: 38px 28px 10px 25px;
+  }
+
+  @media (min-width: $desctop-width) {
+    order: 4;
+    flex-basis: 47%;
+    margin: 0 140px 0 124px;
+  }
 }
 
 .profile__tags {
   flex-basis: 100%;
+  width: 100%;
 
   @include text-area-reset;
   text-align: center;
@@ -30,4 +104,23 @@
   font-size: 16px;
   line-height: 18px;
   color: $special-grey-opacity;
+
+  @media (min-width: $desctop-width) {
+    text-align: left;
+    font-size: 20px;
+    line-height: 22px;
+  }
+}
+
+.profile__image {
+  margin-bottom: 18px;
+
+  @media (min-width: $tablet-width) {
+    order: 4;
+    margin: 0 75px 40px 0;
+  }
+
+  @media (min-width: $desctop-width) {
+    order: 3;
+  }
 }
