--- a/source/sass/register.scss
+++ b/source/sass/register.scss
@@ -9,7 +9,7 @@
     padding: 74px 40px 29px 40px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     padding: 70px 130px 165px 130px;
   }
 }
@@ -23,7 +23,7 @@
     right: 85px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     bottom: initial;
     top: 242px;
     right: 85px;
