--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -35,4 +35,4 @@ $popup-shadow: rgba(29, 46, 91, 0.14);
 // resolutions
 $mobile-width: 320px;
 $tablet-width: 768px;
-$desctop-width: 1440px;
+$desktop-width: 1440px;
