--- a/source/sass/about.scss
+++ b/source/sass/about.scss
@@ -14,10 +14,10 @@
     padding: 33px 74px 82px 74px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     background-image:
-      url("../img/about-bg-desctop.png"),
-      url("../img/about-bg-rect-desctop.png");
+      url("../img/about-bg-desktop.png"),
+      url("../img/about-bg-rect-desktop.png");
     background-repeat: no-repeat, no-repeat;
     background-position:
       top 125px right,
@@ -49,7 +49,7 @@
     margin-bottom: 90px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     margin-bottom: 125px;
   }
 }
