--- a/source/sass/calendar.scss
+++ b/source/sass/calendar.scss
@@ -89,7 +89,7 @@
     line-height: 18px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     @include flex;
     padding: 10px;
   }
