--- a/source/sass/companions.scss
+++ b/source/sass/companions.scss
@@ -12,7 +12,7 @@
     background-position: top 50px right 74px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
@@ -33,7 +33,7 @@
     line-height: 34px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     align-self: start;
     margin: 0;
   }
@@ -45,7 +45,7 @@
     line-height: 24px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     justify-self: flex-start;
   }
 }
@@ -58,7 +58,7 @@
     justify-content: space-between;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     grid-column: 2;
     grid-row: 1 / -1;
   }
