--- a/source/sass/countries-filter.scss
+++ b/source/sass/countries-filter.scss
@@ -1,3 +1,11 @@
 .countries-filter-popup {
   padding-bottom: 28px;
+
+  @media (min-width: $tablet-width) {
+    @include flex;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / -1;
+  }
 }
