--- a/source/sass/interested.scss
+++ b/source/sass/interested.scss
@@ -8,7 +8,7 @@
     padding: 72px 75px 45px 75px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     padding: 109px 130px 103px 130px;
   }
 }
