--- a/source/sass/intro.scss
+++ b/source/sass/intro.scss
@@ -14,7 +14,7 @@
       bottom 148px left;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     @include flex;
     justify-content: space-between;
 
