--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -4,4 +4,30 @@
   padding: 73px 25px 46px 25px;
   background-color: $basic-blue-light;
   color: $basic-blue-dark;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 40px 62px 40px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+    column-gap: 85px;
+    grid-template-columns: 1fr min-content;
+    align-items: start;
+    padding: 53px 60px 85px 60px;
+  }
+}
+
+.main__button-container {
+  @media (min-width: $tablet-width) {
+    @include flex;
+
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-bottom: 10px;
+    grid-column: 1 / -1;
+  }
 }
