--- a/source/sass/menu.scss
+++ b/source/sass/menu.scss
@@ -7,18 +7,10 @@
   color: $special-midnight;
   background-color: $white;
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     background-color: $basic-blue;
   }
 }
-
-// .menu--closed {
-//   @media (min-width: $tablet-width) {
-//     background-color: $special-midnight;
-//     align-items: center;
-//     justify-content: space-between;
-//   }
-// }
 
 .menu__header {
   @include flex;
@@ -32,10 +24,9 @@
     flex-basis: 50%;
     margin-bottom: 98px;
     padding-top: 12px;
-    // background-color: $special-midnight;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     flex-basis: 25%;
     padding: 0;
   }
@@ -49,7 +40,7 @@
     padding-left: 57px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     @include flex;
 
     flex-basis: 55%;
@@ -58,17 +49,3 @@
     background-color: $basic-blue;
   }
 }
-
-// .menu__body {
-//   &--closed {
-//     display: none;
-//   }
-
-//   &--open {
-//     display: block;
-//   }
-
-//   @media (min-width: $desctop-width) {
-//     display: block;
-//   }
-// }
