--- a/source/sass/page-footer.scss
+++ b/source/sass/page-footer.scss
@@ -12,7 +12,7 @@
     padding: 46px 40px 32px 40px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     padding: 47px 60px 43px 60px;
   }
 }
@@ -40,7 +40,7 @@
     border: none;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     border-top: none;
   }
 }
