--- a/source/sass/page-header.scss
+++ b/source/sass/page-header.scss
@@ -7,7 +7,7 @@
     background-color: $special-midnight;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     padding: 46px 60px 0 60px;
     background-color: $basic-blue;
   }
@@ -16,15 +16,21 @@
 .page-header--inner {
   background-color: $basic-blue;
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     position: relative;
     padding-bottom: 148px;
     border-radius: 0 0 26px 26px;
   }
 }
 
+.page-header--catalog {
+  @media (min-width: $desktop-width) {
+    padding-bottom: 60px;
+  }
+}
+
 .page-header__toggle-menu-button {
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     display: none;
   }
 }
