--- a/source/sass/plans.scss
+++ b/source/sass/plans.scss
@@ -8,7 +8,7 @@
     padding: 53px 75px 63px 75px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     padding: 54px 58px 64px 124px;
   }
 }
@@ -49,7 +49,7 @@
     flex-basis: 100%;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     @include flex;
   }
 }
@@ -66,11 +66,11 @@
     letter-spacing: 0.1em;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     flex-basis: 50%;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     border: none;
   }
 }
@@ -90,7 +90,7 @@
     line-height: 24px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     display: block;
     flex-basis: 50%;
   }
