--- a/source/sass/profile.scss
+++ b/source/sass/profile.scss
@@ -26,13 +26,13 @@
     letter-spacing: 0.08em;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     letter-spacing: 0.07em;
   }
 }
 
 .profile__title--tags {
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     left: 39px;
     padding: 0 14px;
   }
@@ -47,7 +47,7 @@
     justify-content: space-between;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     position: relative;
     z-index: 2;
     margin-top: -190px;
@@ -72,7 +72,7 @@
     margin-bottom: 40px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     order: 5;
     flex-basis: 21%;
     margin: 0 60px 0 0;
@@ -86,7 +86,7 @@
     padding: 38px 28px 10px 25px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     order: 4;
     flex-basis: 47%;
     margin: 0 140px 0 124px;
@@ -105,7 +105,7 @@
   line-height: 18px;
   color: $special-grey-opacity;
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     text-align: left;
     font-size: 20px;
     line-height: 22px;
@@ -120,7 +120,7 @@
     margin: 0 75px 40px 0;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     order: 3;
   }
 }
