--- a/source/sass/quote.scss
+++ b/source/sass/quote.scss
@@ -7,7 +7,7 @@
     padding: 76px 100px 350px 72px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     flex-basis: 20%;
     padding: 32px 23px 0 0;
     text-align: left;
@@ -24,7 +24,7 @@
     padding-right: 300px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     padding: 0;
   }
 }
