--- a/source/sass/social-list.scss
+++ b/source/sass/social-list.scss
@@ -6,7 +6,7 @@
     justify-content: flex-start;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     display: none;
   }
 }
@@ -28,7 +28,7 @@
     transform: translateX(50%);
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     display: flex;
   }
 }
