--- a/source/sass/tag-list.scss
+++ b/source/sass/tag-list.scss
@@ -7,6 +7,18 @@
   line-height: 18px;
 }
 
+.tag-list--catalog {
+  padding: 12px 0;
+  justify-content: flex-start;
+  margin: 0;
+
+  @media (min-width: $tablet-width) {
+    width: 100%;
+    grid-area: tag-list;
+    padding: 0;
+  }
+}
+
 .tag-list__item {
   margin-right: 5px;
 }
