--- a/source/sass/user-score.scss
+++ b/source/sass/user-score.scss
@@ -38,7 +38,6 @@
   font-size: 18px;
   line-height: 18px;
   color: $basic-blue;
-  // padding: 20px;
   background: transparent;
 
   @media (min-width: $tablet-width) {
@@ -46,7 +45,7 @@
     margin: 0 0 40px 75px;
   }
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     color: $white;
     margin: 0 0 149px 75px;
   }
@@ -59,7 +58,7 @@
   border-bottom: 1px solid $basic-blue;
   margin-bottom: 6px;
 
-  @media (min-width: $desctop-width) {
+  @media (min-width: $desktop-width) {
     border-bottom: 1px solid $white;
   }
 }
